test/users/vass/uniquify/u2-local-extern-extern.good
u2-local-extern-extern.chpl:8: error: type conflict for extern variable 'sublocid_local'
./ux-externs.h:1: note: the C type is 'int64_t'
u2-local-extern-extern.chpl:8: note: the Chapel type is 'real(64)'
